fixed alignment issues on calc and orb pages

--- a/frontend/src/styles.css
+++ b/frontend/src/styles.css
@@ -417,6 +417,14 @@ body {
     }
 }
 
+@media (max-width: 950px) {
+    .comparison-graphs-grid {
+        max-width: 100vw;
+        grid-template-columns: 1fr;
+        grid-template-rows: repeat(4, 1fr);
+    }
+}
+
 body.lvl-calc, html {
     height: 100%;
     min-height: 100vh;
@@ -710,9 +718,10 @@ body.lvl-calc .comparison-graphs-grid canvas {
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr 1fr;
     gap: 40px;
-    justify-content: center;
-    width: 900px;
-    margin-right: 180px;
+    justify-items: center;
+    max-width: 1030px;
+    width: 100%;
+    margin: 0 auto;
 }
 
 .orb-results-grid {
@@ -722,6 +731,7 @@ body.lvl-calc .comparison-graphs-grid canvas {
     gap: 20px;
     justify-content: center;
     width: 75vw;
+    max-width: 1000px;
 }
 
 
